--- a/ProyectoFinal_Hotel/nbproject/project.properties
+++ b/ProyectoFinal_Hotel/nbproject/project.properties
@@ -27,12 +27,9 @@ dist.dir=dist
 dist.jar=${dist.dir}/ProyectoFinal_Hotel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\Diego\\Desktop\\Drivers_NB_BDD\\mariadb-java-client-3.0.11.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.mariadb-java-client-3.0.11.jar}:\
-    ${libs.absolutelayout.classpath}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
