--- a/ProyectoFinal_Hotel/nbproject/project.properties
+++ b/ProyectoFinal_Hotel/nbproject/project.properties
@@ -27,14 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/ProyectoFinal_Hotel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.jcalendar-1.4.jar=D:\\Documentos\\NetBeansProjects\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\Diego\\Desktop\\Drivers_NB_BDD\\mariadb-java-client-3.0.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.0.11.jar}:\
-    ${libs.absolutelayout.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
