--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ hs_err_pid*
 replay_pid*
 /ProyectoFinal_Hotel/nbproject/private/
 /ProyectoFinal_Hotel/build/
+/ProyectoFinal_Hotel_2/build/
+/ProyectoFinal_Hotel_2/nbproject/private/
