--- a/ProyectoFinal_Hotel/nbproject/project.properties
+++ b/ProyectoFinal_Hotel/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ProyectoFinal_Hotel
+application.vendor=Diego
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,13 +27,16 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/ProyectoFinal_Hotel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.mariadb-java-client-3.0.11.jar=C:\\Users\\Diego\\Desktop\\Drivers_NB_BDD\\mariadb-java-client-3.0.11.jar
+file.reference.jcalendar-1.4.jar=../../../../Desktop/Nueva carpeta/lib/jcalendar-1.4.jar
+file.reference.mariadb-java-client-3.0.11.jar=../../../../Desktop/Drivers_NB_BDD/mariadb-java-client-3.0.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.0.11.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
