--- a/ProyectoFinal_Hotel/nbproject/project.properties
+++ b/ProyectoFinal_Hotel/nbproject/project.properties
@@ -30,13 +30,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=../../../../Desktop/Nueva carpeta/lib/jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=D:\\Documentos\\NetBeansProjects\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mariadb-java-client-3.0.11.jar=../../../../Desktop/Drivers_NB_BDD/mariadb-java-client-3.0.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mariadb-java-client-3.0.11.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
